--- a/sandbox/src/components/tabs-steps/tabs-steps.scss
+++ b/sandbox/src/components/tabs-steps/tabs-steps.scss
@@ -2,7 +2,7 @@
 
     .c-tabs__tablist {
       background-image: url('../img/dashed-line.svg');
-      background-repeat-y: no-repeat;
+      background-repeat: repeat no-repeat;
       background-position: left 1rem top 1rem;
       background-clip: content-box;
       padding: 0 1rem;
